interfaces/modules/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ISLIST

Grammar

Rule 0     S' -> start
Rule 1     start -> CALC calc
Rule 2     start -> CHECK check
Rule 3     start -> SPLIT split
Rule 4     start -> TOKEN token
Rule 5     start -> ISNUMBER isnumber
Rule 6     start -> ISSTRING isstring
Rule 7     start -> STATE state
Rule 8     lang -> premises MINUS MINUS conclusion
Rule 9     lang -> MINUS MINUS conclusion
Rule 10    premises -> statement
Rule 11    statement -> statement COMA statement
Rule 12    statement -> exp symb term
Rule 13    statement -> exp symb VAR
Rule 14    statement -> exp IN NAME
Rule 15    exp -> exp COMA exp
Rule 16    exp -> exp SEMICOLON exp
Rule 17    exp -> NAME OP exp CP
Rule 18    exp -> term
Rule 19    exp -> VAR
Rule 20    term -> NUM
Rule 21    term -> STRING
Rule 22    term -> boolean
Rule 23    term -> list
Rule 24    list -> OSB exp CSB
Rule 25    list -> INF exp SUP
Rule 26    list -> OSB CSB
Rule 27    symb -> EQUAL EQUAL
Rule 28    symb -> EXC EQUAL
Rule 29    symb -> INF EQUAL
Rule 30    symb -> SUP EQUAL
Rule 31    symb -> INF
Rule 32    symb -> SUP
Rule 33    symb -> MINUS SUP
Rule 34    conclusion -> exp MINUS SUP exp
Rule 35    conclusion -> list ins_exp MINUS SUP list
Rule 36    ins_exp -> NAME
Rule 37    ins_exp -> exp
Rule 38    boolean -> TRUE
Rule 39    boolean -> FALSE
Rule 40    check -> lang
Rule 41    split -> s_exp
Rule 42    s_exp -> s_exp COMA s_exp
Rule 43    s_exp -> s_exp SEMICOLON s_exp
Rule 44    s_exp -> NAME OP exp CP
Rule 45    s_exp -> term
Rule 46    s_exp -> VAR
Rule 47    token -> t_exp
Rule 48    token -> t_list
Rule 49    token -> t_statement
Rule 50    token -> t_state_ins
Rule 51    t_exp -> t_exp COMA t_exp
Rule 52    t_exp -> t_exp SEMICOLON t_exp
Rule 53    t_exp -> NAME OP t_exp CP
Rule 54    t_exp -> t_term
Rule 55    t_exp -> VAR
Rule 56    t_term -> NUM
Rule 57    t_term -> boolean
Rule 58    t_term -> t_list
Rule 59    t_term -> STRING
Rule 60    t_list -> OSB t_exp CSB
Rule 61    t_list -> INF t_exp SUP
Rule 62    t_list -> OSB CSB
Rule 63    t_list -> INF SUP
Rule 64    t_statement -> t_statement COMA t_statement
Rule 65    t_statement -> t_exp symb term
Rule 66    t_statement -> t_exp symb VAR
Rule 67    t_statement -> t_exp IN NAME
Rule 68    t_state_ins -> t_list t_ins_exp
Rule 69    t_ins_exp -> t_ins
Rule 70    t_ins_exp -> t_exp
Rule 71    t_ins -> NAME
Rule 72    isnumber -> NUM
Rule 73    isstring -> STRING
Rule 74    calc -> c_exp
Rule 75    calc -> c_condition
Rule 76    c_condition -> c_exp comparator c_exp
Rule 77    comparator -> EQUAL EQUAL
Rule 78    comparator -> EXC EQUAL
Rule 79    comparator -> SUP
Rule 80    comparator -> SUP EQUAL
Rule 81    comparator -> INF
Rule 82    comparator -> INF EQUAL
Rule 83    c_exp -> NAME OP c_exp CP
Rule 84    c_exp -> c_exp COMA c_exp
Rule 85    c_exp -> c_exp SEMICOLON c_exp
Rule 86    c_exp -> NUM
Rule 87    c_exp -> boolean
Rule 88    c_exp -> STRING
Rule 89    c_exp -> list
Rule 90    c_list -> OSB c_morelist CSB
Rule 91    c_morelist -> NUM COMA c_morelist
Rule 92    c_morelist -> NUM SEMICOLON c_morelist
Rule 93    c_morelist -> NUM
Rule 94    c_list -> OSB CSB
Rule 95    c_list -> INF c_morelist SUP
Rule 96    state -> st_list st_ins_exp
Rule 97    st_ins_exp -> st_ins
Rule 98    st_ins_exp -> st_exp
Rule 99    st_ins -> NAME
Rule 100   st_exp -> NAME OP t_exp CP
Rule 101   st_list -> OSB s_exp CSB
Rule 102   st_list -> INF s_exp SUP

Terminals, with rules where they appear

CALC                 : 1
CHECK                : 2
COMA                 : 11 15 42 51 64 84 91
CP                   : 17 44 53 83 100
CSB                  : 24 26 60 62 90 94 101
EQUAL                : 27 27 28 29 30 77 77 78 80 82
EXC                  : 28 78
FALSE                : 39
IN                   : 14 67
INF                  : 25 29 31 61 63 81 82 95 102
ISLIST               : 
ISNUMBER             : 5
ISSTRING             : 6
MINUS                : 8 8 9 9 33 34 35
NAME                 : 14 17 36 44 53 67 71 83 99 100
NUM                  : 20 56 72 86 91 92 93
OP                   : 17 44 53 83 100
OSB                  : 24 26 60 62 90 94 101
SEMICOLON            : 16 43 52 85 92
SPLIT                : 3
STATE                : 7
STRING               : 21 59 73 88
SUP                  : 25 30 32 33 34 35 61 63 79 80 95 102
TOKEN                : 4
TRUE                 : 38
VAR                  : 13 19 46 55 66
error                : 

Nonterminals, with rules where they appear

boolean              : 22 57 87
c_condition          : 75
c_exp                : 74 76 76 83 84 84 85 85
c_list               : 
c_morelist           : 90 91 92 95
calc                 : 1
check                : 2
comparator           : 76
conclusion           : 8 9
exp                  : 12 13 14 15 15 16 16 17 24 25 34 34 37 44
ins_exp              : 35
isnumber             : 5
isstring             : 6
lang                 : 40
list                 : 23 35 35 89
premises             : 8
s_exp                : 41 42 42 43 43 101 102
split                : 3
st_exp               : 98
st_ins               : 97
st_ins_exp           : 96
st_list              : 96
start                : 0
state                : 7
statement            : 10 11 11
symb                 : 12 13 65 66
t_exp                : 47 51 51 52 52 53 60 61 65 66 67 70 100
t_ins                : 69
t_ins_exp            : 68
t_list               : 48 58 68
t_state_ins          : 50
t_statement          : 49 64 64
t_term               : 54
term                 : 12 18 45 65
token                : 4

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . CALC calc
    (2) start -> . CHECK check
    (3) start -> . SPLIT split
    (4) start -> . TOKEN token
    (5) start -> . ISNUMBER isnumber
    (6) start -> . ISSTRING isstring
    (7) start -> . STATE state

    CALC            shift and go to state 2
    CHECK           shift and go to state 3
    SPLIT           shift and go to state 4
    TOKEN           shift and go to state 5
    ISNUMBER        shift and go to state 6
    ISSTRING        shift and go to state 7
    STATE           shift and go to state 8

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> CALC . calc
    (74) calc -> . c_exp
    (75) calc -> . c_condition
    (83) c_exp -> . NAME OP c_exp CP
    (84) c_exp -> . c_exp COMA c_exp
    (85) c_exp -> . c_exp SEMICOLON c_exp
    (86) c_exp -> . NUM
    (87) c_exp -> . boolean
    (88) c_exp -> . STRING
    (89) c_exp -> . list
    (76) c_condition -> . c_exp comparator c_exp
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (24) list -> . OSB exp CSB
    (25) list -> . INF exp SUP
    (26) list -> . OSB CSB

    NAME            shift and go to state 12
    NUM             shift and go to state 13
    STRING          shift and go to state 15
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    OSB             shift and go to state 19
    INF             shift and go to state 20

    calc                           shift and go to state 9
    c_exp                          shift and go to state 10
    c_condition                    shift and go to state 11
    boolean                        shift and go to state 14
    list                           shift and go to state 16

state 3

    (2) start -> CHECK . check
    (40) check -> . lang
    (8) lang -> . premises MINUS MINUS conclusion
    (9) lang -> . MINUS MINUS conclusion
    (10) premises -> . statement
    (11) statement -> . statement COMA statement
    (12) statement -> . exp symb term
    (13) statement -> . exp symb VAR
    (14) statement -> . exp IN NAME
    (15) exp -> . exp COMA exp
    (16) exp -> . exp SEMICOLON exp
    (17) exp -> . NAME OP exp CP
    (18) exp -> . term
    (19) exp -> . VAR
    (20) term -> . NUM
    (21) term -> . STRING
    (22) term -> . boolean
    (23) term -> . list
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (24) list -> . OSB exp CSB
    (25) list -> . INF exp SUP
    (26) list -> . OSB CSB

    MINUS           shift and go to state 24
    NAME            shift and go to state 29
    VAR             shift and go to state 28
    NUM             shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    OSB             shift and go to state 19
    INF             shift and go to state 20

    check                          shift and go to state 21
    lang                           shift and go to state 22
    premises                       shift and go to state 23
    statement                      shift and go to state 25
    exp                            shift and go to state 26
    term                           shift and go to state 27
    boolean                        shift and go to state 32
    list                           shift and go to state 33

state 4

    (3) start -> SPLIT . split
    (41) split -> . s_exp
    (42) s_exp -> . s_exp COMA s_exp
    (43) s_exp -> . s_exp SEMICOLON s_exp
    (44) s_exp -> . NAME OP exp CP
    (45) s_exp -> . term
    (46) s_exp -> . VAR
    (20) term -> . NUM
    (21) term -> . STRING
    (22) term -> . boolean
    (23) term -> . list
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (24) list -> . OSB exp CSB
    (25) list -> . INF exp SUP
    (26) list -> . OSB CSB

    NAME            shift and go to state 36
    VAR             shift and go to state 38
    NUM             shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    OSB             shift and go to state 19
    INF             shift and go to state 20

    split                          shift and go to state 34
    s_exp                          shift and go to state 35
    term                           shift and go to state 37
    boolean                        shift and go to state 32
    list                           shift and go to state 33

state 5

    (4) start -> TOKEN . token
    (47) token -> . t_exp
    (48) token -> . t_list
    (49) token -> . t_statement
    (50) token -> . t_state_ins
    (51) t_exp -> . t_exp COMA t_exp
    (52) t_exp -> . t_exp SEMICOLON t_exp
    (53) t_exp -> . NAME OP t_exp CP
    (54) t_exp -> . t_term
    (55) t_exp -> . VAR
    (60) t_list -> . OSB t_exp CSB
    (61) t_list -> . INF t_exp SUP
    (62) t_list -> . OSB CSB
    (63) t_list -> . INF SUP
    (64) t_statement -> . t_statement COMA t_statement
    (65) t_statement -> . t_exp symb term
    (66) t_statement -> . t_exp symb VAR
    (67) t_statement -> . t_exp IN NAME
    (68) t_state_ins -> . t_list t_ins_exp
    (56) t_term -> . NUM
    (57) t_term -> . boolean
    (58) t_term -> . t_list
    (59) t_term -> . STRING
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE

    NAME            shift and go to state 44
    VAR             shift and go to state 46
    OSB             shift and go to state 47
    INF             shift and go to state 48
    NUM             shift and go to state 49
    STRING          shift and go to state 51
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    token                          shift and go to state 39
    t_exp                          shift and go to state 40
    t_list                         shift and go to state 41
    t_statement                    shift and go to state 42
    t_state_ins                    shift and go to state 43
    t_term                         shift and go to state 45
    boolean                        shift and go to state 50

state 6

    (5) start -> ISNUMBER . isnumber
    (72) isnumber -> . NUM

    NUM             shift and go to state 53

    isnumber                       shift and go to state 52

state 7

    (6) start -> ISSTRING . isstring
    (73) isstring -> . STRING

    STRING          shift and go to state 55

    isstring                       shift and go to state 54

state 8

    (7) start -> STATE . state
    (96) state -> . st_list st_ins_exp
    (101) st_list -> . OSB s_exp CSB
    (102) st_list -> . INF s_exp SUP

    OSB             shift and go to state 58
    INF             shift and go to state 59

    state                          shift and go to state 56
    st_list                        shift and go to state 57

state 9

    (1) start -> CALC calc .

    $end            reduce using rule 1 (start -> CALC calc .)


state 10

    (74) calc -> c_exp .
    (84) c_exp -> c_exp . COMA c_exp
    (85) c_exp -> c_exp . SEMICOLON c_exp
    (76) c_condition -> c_exp . comparator c_exp
    (77) comparator -> . EQUAL EQUAL
    (78) comparator -> . EXC EQUAL
    (79) comparator -> . SUP
    (80) comparator -> . SUP EQUAL
    (81) comparator -> . INF
    (82) comparator -> . INF EQUAL

    $end            reduce using rule 74 (calc -> c_exp .)
    COMA            shift and go to state 60
    SEMICOLON       shift and go to state 61
    EQUAL           shift and go to state 63
    EXC             shift and go to state 64
    SUP             shift and go to state 65
    INF             shift and go to state 66

    comparator                     shift and go to state 62

state 11

    (75) calc -> c_condition .

    $end            reduce using rule 75 (calc -> c_condition .)


state 12

    (83) c_exp -> NAME . OP c_exp CP

    OP              shift and go to state 67


state 13

    (86) c_exp -> NUM .

    COMA            reduce using rule 86 (c_exp -> NUM .)
    SEMICOLON       reduce using rule 86 (c_exp -> NUM .)
    EQUAL           reduce using rule 86 (c_exp -> NUM .)
    EXC             reduce using rule 86 (c_exp -> NUM .)
    SUP             reduce using rule 86 (c_exp -> NUM .)
    INF             reduce using rule 86 (c_exp -> NUM .)
    $end            reduce using rule 86 (c_exp -> NUM .)
    CP              reduce using rule 86 (c_exp -> NUM .)


state 14

    (87) c_exp -> boolean .

    COMA            reduce using rule 87 (c_exp -> boolean .)
    SEMICOLON       reduce using rule 87 (c_exp -> boolean .)
    EQUAL           reduce using rule 87 (c_exp -> boolean .)
    EXC             reduce using rule 87 (c_exp -> boolean .)
    SUP             reduce using rule 87 (c_exp -> boolean .)
    INF             reduce using rule 87 (c_exp -> boolean .)
    $end            reduce using rule 87 (c_exp -> boolean .)
    CP              reduce using rule 87 (c_exp -> boolean .)


state 15

    (88) c_exp -> STRING .

    COMA            reduce using rule 88 (c_exp -> STRING .)
    SEMICOLON       reduce using rule 88 (c_exp -> STRING .)
    EQUAL           reduce using rule 88 (c_exp -> STRING .)
    EXC             reduce using rule 88 (c_exp -> STRING .)
    SUP             reduce using rule 88 (c_exp -> STRING .)
    INF             reduce using rule 88 (c_exp -> STRING .)
    $end            reduce using rule 88 (c_exp -> STRING .)
    CP              reduce using rule 88 (c_exp -> STRING .)


state 16

    (89) c_exp -> list .

    COMA            reduce using rule 89 (c_exp -> list .)
    SEMICOLON       reduce using rule 89 (c_exp -> list .)
    EQUAL           reduce using rule 89 (c_exp -> list .)
    EXC             reduce using rule 89 (c_exp -> list .)
    SUP             reduce using rule 89 (c_exp -> list .)
    INF             reduce using rule 89 (c_exp -> list .)
    $end            reduce using rule 89 (c_exp -> list .)
    CP              reduce using rule 89 (c_exp -> list .)


state 17

    (38) boolean -> TRUE .

    COMA            reduce using rule 38 (boolean -> TRUE .)
    SEMICOLON       reduce using rule 38 (boolean -> TRUE .)
    EQUAL           reduce using rule 38 (boolean -> TRUE .)
    EXC             reduce using rule 38 (boolean -> TRUE .)
    SUP             reduce using rule 38 (boolean -> TRUE .)
    INF             reduce using rule 38 (boolean -> TRUE .)
    $end            reduce using rule 38 (boolean -> TRUE .)
    IN              reduce using rule 38 (boolean -> TRUE .)
    MINUS           reduce using rule 38 (boolean -> TRUE .)
    CSB             reduce using rule 38 (boolean -> TRUE .)
    CP              reduce using rule 38 (boolean -> TRUE .)


state 18

    (39) boolean -> FALSE .

    COMA            reduce using rule 39 (boolean -> FALSE .)
    SEMICOLON       reduce using rule 39 (boolean -> FALSE .)
    EQUAL           reduce using rule 39 (boolean -> FALSE .)
    EXC             reduce using rule 39 (boolean -> FALSE .)
    SUP             reduce using rule 39 (boolean -> FALSE .)
    INF             reduce using rule 39 (boolean -> FALSE .)
    $end            reduce using rule 39 (boolean -> FALSE .)
    IN              reduce using rule 39 (boolean -> FALSE .)
    MINUS           reduce using rule 39 (boolean -> FALSE .)
    CSB             reduce using rule 39 (boolean -> FALSE .)
    CP              reduce using rule 39 (boolean -> FALSE .)


state 19

    (24) list -> OSB . exp CSB
    (26) list -> OSB . CSB
    (15) exp -> . exp COMA exp
    (16) exp -> . exp SEMICOLON exp
    (17) exp -> . NAME OP exp CP
    (18) exp -> . term
    (19) exp -> . VAR
    (20) term -> . NUM
    (21) term -> . STRING
    (22) term -> . boolean
    (23) term -> . list
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (24) list -> . OSB exp CSB
    (25) list -> . INF exp SUP
    (26) list -> . OSB CSB

    CSB             shift and go to state 69
    NAME            shift and go to state 29
    VAR             shift and go to state 28
    NUM             shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    OSB             shift and go to state 19
    INF             shift and go to state 20

    exp                            shift and go to state 68
    term                           shift and go to state 27
    boolean                        shift and go to state 32
    list                           shift and go to state 33

state 20

    (25) list -> INF . exp SUP
    (15) exp -> . exp COMA exp
    (16) exp -> . exp SEMICOLON exp
    (17) exp -> . NAME OP exp CP
    (18) exp -> . term
    (19) exp -> . VAR
    (20) term -> . NUM
    (21) term -> . STRING
    (22) term -> . boolean
    (23) term -> . list
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (24) list -> . OSB exp CSB
    (25) list -> . INF exp SUP
    (26) list -> . OSB CSB

    NAME            shift and go to state 29
    VAR             shift and go to state 28
    NUM             shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    OSB             shift and go to state 19
    INF             shift and go to state 20

    exp                            shift and go to state 70
    term                           shift and go to state 27
    boolean                        shift and go to state 32
    list                           shift and go to state 33

state 21

    (2) start -> CHECK check .

    $end            reduce using rule 2 (start -> CHECK check .)


state 22

    (40) check -> lang .

    $end            reduce using rule 40 (check -> lang .)


state 23

    (8) lang -> premises . MINUS MINUS conclusion

    MINUS           shift and go to state 71


state 24

    (9) lang -> MINUS . MINUS conclusion

    MINUS           shift and go to state 72


state 25

    (10) premises -> statement .
    (11) statement -> statement . COMA statement

    MINUS           reduce using rule 10 (premises -> statement .)
    COMA            shift and go to state 73


state 26

    (12) statement -> exp . symb term
    (13) statement -> exp . symb VAR
    (14) statement -> exp . IN NAME
    (15) exp -> exp . COMA exp
    (16) exp -> exp . SEMICOLON exp
    (27) symb -> . EQUAL EQUAL
    (28) symb -> . EXC EQUAL
    (29) symb -> . INF EQUAL
    (30) symb -> . SUP EQUAL
    (31) symb -> . INF
    (32) symb -> . SUP
    (33) symb -> . MINUS SUP

    IN              shift and go to state 75
    COMA            shift and go to state 76
    SEMICOLON       shift and go to state 77
    EQUAL           shift and go to state 78
    EXC             shift and go to state 79
    INF             shift and go to state 80
    SUP             shift and go to state 81
    MINUS           shift and go to state 82

    symb                           shift and go to state 74

state 27

    (18) exp -> term .
